cmake_minimum_required(VERSION 2.8.12)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules/")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra")
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/libcrypt)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/zadanie_1)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/zadanie_2)
